--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="static/main.css">
+  <!-- <link rel="stylesheet" type="text/css" href="static/main.css"> -->
+  <link rel="stylesheet" type="text/css" href="static/normalize.css">
+  <link rel="stylesheet" type="text/css" href="static/skeleton.css">
 </head>
 <body>
     <h1>
