--- a/Index.html
+++ b/Index.html
@@ -45,21 +45,21 @@
         </div>
         <div class="row">
             <label class="three columns" for="topOffset">Top mask vertical offset:</label>
-            <input class="nine columns" type="number" id="topOffset" name="topOffset" min="0" step="1" value="0">
+            <input class="two columns" type="number" id="topOffset" name="topOffset" min="0" step="1" value="0">
         </div>
         <div class="row">
             <label class="three columns" for="topHeight">Top mask height:</label>
-            <input class="nine columns" type="number" id="topHeight" name="topHeight" min="0" step="1" value="0">
+            <input class="two columns" type="number" id="topHeight" name="topHeight" min="0" step="1" value="0">
         </div>
         <div class="row">
             <label class="three columns" for="botHeight">Top mask height:</label>
-            <input class="nine columns" type="number" id="botHeight" name="botHeight" min="0" step="1" value="0">
+            <input class="two columns" type="number" id="botHeight" name="botHeight" min="0" step="1" value="0">
         </div>
         <div class="row">
             <label class="three columns" for="binaryThreshold">Binary Threshold:</label>
-            <input class="nine columns" type="number" id="binaryThreshold" name="binaryThreshold" min="0" max="1" step="0.001" value="0.3">
+            <input class="two columns" type="number" id="binaryThreshold" name="binaryThreshold" min="0" max="1" step="0.001" value="0.3">
         </div>
-        <input class="button-primary" type="submit" value="Initialize job">
+        <input class="button-primary u-full-width" type="submit" value="Initialize job">
     </form>
     <!-- <p>Query = {query}</p>
     <p>Mounts = {mounts}</p>
