--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
   <!-- <link rel="stylesheet" type="text/css" href="static/main.css"> -->
   <link rel="stylesheet" type="text/css" href="static/normalize.css">
   <link rel="stylesheet" type="text/css" href="static/skeleton.css">
+  <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <h1>
