--- a/Index.html
+++ b/Index.html
@@ -6,66 +6,74 @@
   <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <h1>
+  <div class="section">
+    <div class="container">
+      <h1>
         Segmentation Processor for Images of Tongues (SPIT)
-    </h1>
-    <form action="/finalizeJob" method="POST">
+      </h1>
+    </div>
+  </div>
+  <div class="section">
+    <div class="container">
+      <form action="/finalizeJob" method="POST">
         <div class="row">
-            <label class="three columns" for="videoRootMountPoint">Video root mount point:</label>
-            <select class="nine columns" name="videoRootMountPoint" id="videoRootMountPoint">
-            {mopts}
-            </select>
+          <label class="three columns" for="videoRootMountPoint">Video root mount point:</label>
+          <select class="nine columns" name="videoRootMountPoint" id="videoRootMountPoint">
+          {mopts}
+          </select>
         </div>
         <div class="row">
-            <label class="three columns" for="videoRoot">Video root directories (one per line):</label>
-            <textarea class="nine columns" rows="3" cols="30" id="videoRoot" name="videoRoot" value=""></textarea>
+          <label class="three columns" for="videoRoot">Video root directories (one per line):</label>
+          <textarea class="nine columns" rows="3" cols="30" id="videoRoot" name="videoRoot" value=""></textarea>
         </div>
         <div class="row">
-            <label class="three columns" for="videoFilter">Video filename filter:</label>
-            <input class="nine columns" type="text" id="videoFilter" name="videoFilter" value="*">
+          <label class="three columns" for="videoFilter">Video filename filter:</label>
+          <input class="nine columns" type="text" id="videoFilter" name="videoFilter" value="*">
         </div>
         <div class="row">
-            <label class="three columns" for="maskSaveDirectory">Mask save directory:</label>
-            <input class="nine columns" type="text" id="maskSaveDirectory" name="maskSaveDirectory" value="">
+          <label class="three columns" for="maskSaveDirectory">Mask save directory:</label>
+          <input class="nine columns" type="text" id="maskSaveDirectory" name="maskSaveDirectory" value="">
         </div>
         <div class="row"
-            <label>
-              <input type="radio" id="windowsStyle" name="pathStyle" value="windowsStylePaths" checked>
-              <span class="label-body">Windows-style paths</span>
-            </label>
-            <label>
-              <input type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
-              <span class="label-body">Mac/Linux-style paths</span>
-            </label>
+          <label>
+            <input type="radio" id="windowsStyle" name="pathStyle" value="windowsStylePaths" checked>
+            <span class="label-body">Windows-style paths</span>
+          </label>
+          <label>
+            <input type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
+            <span class="label-body">Mac/Linux-style paths</span>
+          </label>
         </div>
         <div class="row">
-            <label class="three columns" class="six columns" for="networkName">Neural network name:</label>
-            <select class="nine columns" name="neuralNetwork" id="neuralNetwork">
-            {nopts}
-            </select>
+          <label class="three columns" class="six columns" for="networkName">Neural network name:</label>
+          <select class="nine columns" name="neuralNetwork" id="neuralNetwork">
+          {nopts}
+          </select>
         </div>
         <div class="row">
-            <label class="three columns" for="topOffset">Top mask vertical offset:</label>
-            <input class="two columns" type="number" id="topOffset" name="topOffset" min="0" step="1" value="0">
+          <label class="three columns" for="topOffset">Top mask vertical offset:</label>
+          <input class="two columns" type="number" id="topOffset" name="topOffset" min="0" step="1" value="0">
         </div>
         <div class="row">
-            <label class="three columns" for="topHeight">Top mask height:</label>
-            <input class="two columns" type="number" id="topHeight" name="topHeight" min="0" step="1" value="0">
+          <label class="three columns" for="topHeight">Top mask height:</label>
+          <input class="two columns" type="number" id="topHeight" name="topHeight" min="0" step="1" value="0">
         </div>
         <div class="row">
-            <label class="three columns" for="botHeight">Top mask height:</label>
-            <input class="two columns" type="number" id="botHeight" name="botHeight" min="0" step="1" value="0">
+          <label class="three columns" for="botHeight">Top mask height:</label>
+          <input class="two columns" type="number" id="botHeight" name="botHeight" min="0" step="1" value="0">
         </div>
         <div class="row">
-            <label class="three columns" for="binaryThreshold">Binary Threshold:</label>
-            <input class="two columns" type="number" id="binaryThreshold" name="binaryThreshold" min="0" max="1" step="0.001" value="0.3">
+          <label class="three columns" for="binaryThreshold">Binary Threshold:</label>
+          <input class="two columns" type="number" id="binaryThreshold" name="binaryThreshold" min="0" max="1" step="0.001" value="0.3">
         </div>
         <input class="button-primary u-full-width" type="submit" value="Initialize job">
-    </form>
-    <!-- <p>Query = {query}</p>
-    <p>Mounts = {mounts}</p>
-    <p>Input = {input}</p>
-    <p>Path = {path}</p>
-    <p>environ = {environ}</p> -->
+      </form>
+    </div>
+  </div>
+  <!-- <p>Query = {query}</p>
+  <p>Mounts = {mounts}</p>
+  <p>Input = {input}</p>
+  <p>Path = {path}</p>
+  <p>environ = {environ}</p> -->
 </body>
 </html>
