--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="section">
     <div class="container">
-      <h1>
+      <h1 class="section-heading">
         Segmentation Processor for Images of Tongues (SPIT)
       </h1>
     </div>
@@ -66,7 +66,7 @@
           <label class="three columns" for="binaryThreshold">Binary Threshold:</label>
           <input class="two columns" type="number" id="binaryThreshold" name="binaryThreshold" min="0" max="1" step="0.001" value="0.3">
         </div>
-        <input class="button-primary u-full-width" type="submit" value="Initialize job">
+        <input class="button button-primary u-full-width" type="submit" value="Initialize job">
       </form>
     </div>
   </div>
