--- a/Index.html
+++ b/Index.html
@@ -35,11 +35,11 @@
           <input class="nine columns" type="text" id="maskSaveDirectory" name="maskSaveDirectory" value="">
         </div>
         <div class="row"
-          <label>
+          <label class="two columns">
             <input type="radio" id="windowsStyle" name="pathStyle" value="windowsStylePaths" checked>
             <span class="label-body">Windows-style paths</span>
           </label>
-          <label>
+          <label class="two columns">
             <input type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
             <span class="label-body">Mac/Linux-style paths</span>
           </label>
