--- a/Index.html
+++ b/Index.html
@@ -35,13 +35,13 @@
           <input class="nine columns" type="text" id="maskSaveDirectory" name="maskSaveDirectory" value="">
         </div>
         <div class="row"
-          <label class="two columns">
-            <input type="radio" id="windowsStyle" name="pathStyle" value="windowsStylePaths" checked>
-            <span class="label-body">Windows-style paths</span>
+          <label>
+            <input class="two columns" type="radio" id="windowsStyle" name="pathStyle" value="windowsStylePaths" checked>
+            <span class="label-body two columns">Windows-style paths</span>
           </label>
-          <label class="two columns">
-            <input type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
-            <span class="label-body">Mac/Linux-style paths</span>
+          <label>
+            <input class="two columns" type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
+            <span class="label-body two columns">Mac/Linux-style paths</span>
           </label>
         </div>
         <div class="row">
