--- a/Index.html
+++ b/Index.html
@@ -36,14 +36,14 @@
         </div>
         <div class="row"
           <label>
-            <input class="two columns" type="radio" id="windowsStyle" name="pathStyle" value="windowsStylePaths" checked>
-            <span class="label-body two columns">Windows-style paths</span>
+            <input class="one column" type="radio" id="windowsStyle" name="pathStyle" value="windowsStylePaths" checked>
+            <span class="label-body three columns">Windows-style paths</span>
           </label>
         </div>
         <div class="row"
           <label>
-            <input class="two columns" type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
-            <span class="label-body two columns">Mac/Linux-style paths</span>
+            <input class="one column" type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
+            <span class="label-body three columns">Mac/Linux-style paths</span>
           </label>
         </div>
         <div class="row">
