--- a/Index.html
+++ b/Index.html
@@ -40,13 +40,20 @@
             <span class="label-body three columns">Windows-style paths</span>
           </label>
         </div>
+        <div class="row">
+          <div class="three columns">
+            Path style:
+          </div>
+        </div>
         <div class="row"
           <label>
+            <div class="three columns"></div>
             <input class="one column" type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
             <span class="label-body three columns">Mac/Linux-style paths</span>
           </label>
         </div>
         <div class="row">
+          <div class="three columns"></div>
           <label class="three columns" class="six columns" for="networkName">Neural network name:</label>
           <select class="nine columns" name="neuralNetwork" id="neuralNetwork">
           {nopts}
