--- a/Index.html
+++ b/Index.html
@@ -34,23 +34,21 @@
           <label class="three columns" for="maskSaveDirectory">Mask save directory:</label>
           <input class="nine columns" type="text" id="maskSaveDirectory" name="maskSaveDirectory" value="">
         </div>
-        <div class="row"
-          <label>
-            <input class="one column" type="radio" id="windowsStyle" name="pathStyle" value="windowsStylePaths" checked>
-            <span class="label-body three columns">Windows-style paths</span>
-          </label>
-        </div>
-        <div class="row">
-          <div class="three columns">
-            Path style:
+        <label>
+          <div class="row"
+            <label>
+              <input class="one column" type="radio" id="windowsStyle" name="pathStyle" value="windowsStylePaths" checked>
+              <span class="label-body three columns">Windows-style paths</span>
+            </label>
           </div>
-        </div>
-        <div class="row"
-          <label>
-            <div class="three columns"></div>
-            <input class="one column" type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
-            <span class="label-body three columns">Mac/Linux-style paths</span>
-          </label>
+          <div class="row"
+            <label>
+              <div class="three columns"></div>
+              <input class="one column" type="radio" id="posixStyle" name="pathStyle" value="posixStylePaths">
+              <span class="label-body three columns">Mac/Linux-style paths</span>
+            </label>
+          </div>
+          <span class="label-body three columns">Path style:</span>
         </div>
         <div class="row">
           <div class="three columns"></div>
