--- a/FinalizeJob.html
+++ b/FinalizeJob.html
@@ -9,19 +9,19 @@
     <div class="section">
       <div class="container">
         <h1 class="section-heading">
-          Finalize job:
+          Finalize job
         </h1>
       </div>
     </div>
     <div class="section">
       <div class="container">
         <div class="row">
-          <div class='u-max-full-width'>
-            There are {jobsAhead} jobs ahead of you with {videosAhead} remaining. Your job (Job ID {jobID}) will be enqueued to start as soon as any/all previous jobs are done.
+          <div class='five columns'>
+            There are {jobsAhead} jobs ahead of you with {videosAhead} videos remaining. Your job (Job ID {jobID}) will be enqueued to start as soon as any/all previous jobs are done.
           </div>
         </div>
         <div class="row">
-          <div class='u-max-full-width'>
+          <div class='five columns'>
             Please review the following job specifications and confirm if correct:
           </div>
         </div>
