--- a/FinalizeJob.html
+++ b/FinalizeJob.html
@@ -52,7 +52,7 @@
           <div class="three columns">Binary mask threshold:</div><div class="two columns">{binaryThreshold} </div>
         </div>
         <form action="/confirmJob/{jobID}">
-            <input class="button button-primary" type="submit" value="Confirm and enqueue job" />
+            <input class="five columns button button-primary" type="submit" value="Confirm and enqueue job" />
         </form>
       </div>
     </div>
