--- a/FinalizeJob.html
+++ b/FinalizeJob.html
@@ -16,20 +16,20 @@
     <div class="section">
       <div class="container">
         <div class="row">
-          <div class='five columns'>
+          <div class='seven columns'>
             There are {jobsAhead} jobs ahead of you with {videosAhead} videos remaining. Your job (Job ID {jobID}) will be enqueued to start as soon as any/all previous jobs are done.
           </div>
         </div>
         <div class="row">
-          <div class='five columns'>
+          <div class='seven columns'>
             Please review the following job specifications and confirm if correct:
           </div>
         </div>
         <div class="row">
-          <div class="three columns">Job description:</div><div class="two columns">{jobName} </div>
+          <div class="three columns">Job description:</div><div class="four columns">{jobName} </div>
         </div>
         <div class="row">
-          <details>
+          <details class="seven columns">
               <summary>List of video files:</summary>
               <ul>
                   {videoList}
@@ -37,22 +37,22 @@
           </details>
         </div>
         <div class="row">
-          <div class="three columns">Chosen neural network:</div><div class="two columns">{networkName} </div>
+          <div class="three columns">Chosen neural network:</div><div class="four columns">{networkName} </div>
         </div>
         <div class="row">
-          <div class="three columns">Top mask vertical offset:</div><div class="two columns">{topOffset} </div>
+          <div class="three columns">Top mask vertical offset:</div><div class="four columns">{topOffset} </div>
         </div>
         <div class="row">
-          <div class="three columns">Top mask height:</div><div class="two columns">{topHeight} </div>
+          <div class="three columns">Top mask height:</div><div class="four columns">{topHeight} </div>
         </div>
         <div class="row">
-          <div class="three columns">Bottom mask height:</div><div class="two columns">{botHeight} </div>
+          <div class="three columns">Bottom mask height:</div><div class="four columns">{botHeight} </div>
         </div>
         <div class="row">
-          <div class="three columns">Binary mask threshold:</div><div class="two columns">{binaryThreshold} </div>
+          <div class="three columns">Binary mask threshold:</div><div class="four columns">{binaryThreshold} </div>
         </div>
         <form action="/confirmJob/{jobID}">
-            <input class="five columns button button-primary" type="submit" value="Confirm and enqueue job" />
+            <input class="seven columns button button-primary" type="submit" value="Confirm and enqueue job" />
         </form>
       </div>
     </div>
