--- a/FinalizeJob.html
+++ b/FinalizeJob.html
@@ -51,8 +51,8 @@
         <div class="row">
           <div class="three columns">Binary mask threshold:</div><div class="four columns">{binaryThreshold} </div>
         </div>
-        <form action="/confirmJob/{jobID}">
-            <input class="seven columns button button-primary" type="submit" value="Confirm and enqueue job" />
+        <form class="seven columns" action="/confirmJob/{jobID}">
+            <input class="button button-primary" type="submit" value="Confirm and enqueue job" />
         </form>
       </div>
     </div>
