--- a/FinalizeJob.html
+++ b/FinalizeJob.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="row">
           <div class='seven columns'>
-            There are {jobsAhead} jobs ahead of you with {videosAhead} videos remaining. Your job (Job ID {jobID}) will be enqueued to start as soon as any/all previous jobs are done.
+            There are <strong>{jobsAhead} jobs</strong> ahead of you with <strong>{videosAhead} videos</strong> remaining. Your job (Job ID {jobID}) will be enqueued to start as soon as any/all previous jobs are done.
           </div>
         </div>
         <div class="row">
