Bugfix - incorrect form text for bottom mask height

--- a/Index.html
+++ b/Index.html
@@ -65,7 +65,7 @@
           <input class="two columns" type="number" id="topHeight" name="topHeight" min="0" step="1" value="0">
         </div>
         <div class="row">
-          <label class="three columns" for="botHeight">Top mask height:</label>
+          <label class="three columns" for="botHeight">Bottom mask height:</label>
           <input class="two columns" type="number" id="botHeight" name="botHeight" min="0" step="1" value="0">
         </div>
         <div class="row">
