Stylin' - wrapping pages in section divs

--- a/Error.html
+++ b/Error.html
@@ -6,14 +6,18 @@
     <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
   </head>
 <body>
-  <h1>
-    Error: {errorTitle}
-  </h1>
-  <h2>
-    {errorMsg}
-  </h2>
-  <h2>
-    <a href="{linkURL}">Please click here to {linkAction}.</a>
-  </h2>
+  <div class="section">
+    <div class="container">
+      <h1>
+        Error: {errorTitle}
+      </h1>
+      <h2>
+        {errorMsg}
+      </h2>
+      <h2>
+        <a href="{linkURL}">Please click here to {linkAction}.</a>
+      </h2>
+    </div>
+  </div>
 </body>
 </html>
