--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -6,21 +6,25 @@
     <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
   </head>
     <body>
-        <h1>Job {jobID} is in state {jobStateName}.</h1>
-        <div>Description: {jobName}</div>
-        <div>
+      <div class="section">
+        <div class="container">
+          <h1>Job {jobID} is in state {jobStateName}.</h1>
+          <div>Description: {jobName}</div>
+          <div>
             Processing time per video: {meanTime} &plusmn; {confInt}
-        </div>
-        <div>
+          </div>
+          <div>
             Estimated time remaining: {estimatedTimeRemaining}
-        </div>
-        <div>
+          </div>
+          <div>
             <details>
-                <summary>List of completed video files:</summary>
+              <summary>List of completed video files:</summary>
                 <ul>
-                    {videoList}
+                  {videoList}
                 </ul>
             </details>
+          </div>
         </div>
+      </div>
     </body>
 </html>
