--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -16,36 +16,36 @@
           <h4>{stateDescription}</h4>
           <h4>Job info:</h3>
           <div class="row">
-            <div class="two columns">Description: </div><div class="three columns"><strong>{jobName}</strong></div>
+            <div class="three columns">Description: </div><div class="four columns"><strong>{jobName}</strong></div>
           </div>
           <div class="row">
-            <div class="five columns">
+            <div class="seven columns">
               <progress id="percentDone" value="{percentComplete}" max="100">{percentComplete} %</progress>
             </div>
           </div>
           <div class="row">
-            <div class="two columns">Percent complete:</div><div class="three columns"><strong>{percentComplete} %</strong></div>
+            <div class="three columns">Percent complete:</div><div class="four columns"><strong>{percentComplete} %</strong></div>
           </div>
           <div class="row">
-            <div class="two columns">Number complete:</div><div class="three columns"><strong>{numComplete}/{numTotal}</strong></div>
+            <div class="three columns">Number complete:</div><div class="four columns"><strong>{numComplete}/{numTotal}</strong></div>
           </div>
           <div class="row">
-            <div class="two columns">Estimated time remaining:</div><div class="three columns"><strong>{estimatedTimeRemaining}</strong></div>
+            <div class="three columns">Estimated time remaining:</div><div class="four columns"><strong>{estimatedTimeRemaining}</strong></div>
           </div>
           <div class="row">
-            <div class="two columns">Processing time per video: </div><div class="three columns"><strong>{meanTime} &plusmn; {confInt}</strong></div>
+            <div class="three columns">Processing time per video: </div><div class="four columns"><strong>{meanTime} &plusmn; {confInt}</strong></div>
           </div>
           <div class="row">
-            <div class="two columns">Job creation time: </div><div class="three columns"><strong>{creationTime}</strong></div>
+            <div class="three columns">Job creation time: </div><div class="four columns"><strong>{creationTime}</strong></div>
           </div>
           <div class="row">
-            <div class="two columns">Job start time:</div><div class="three columns"><strong>{startTime}</strong></div>
+            <div class="three columns">Job start time:</div><div class="four columns"><strong>{startTime}</strong></div>
           </div>
           <div class="row">
-            <div class="two columns">Job end time: </div><div class="three columns"><strong>{completionTime}</strong></div>
+            <div class="three columns">Job end time: </div><div class="four columns"><strong>{completionTime}</strong></div>
           </div>
           <div class="row">
-            <div class="two columns">Job state: </div><div class="three columns"><strong>{jobStateName}</strong></div>
+            <div class="three columns">Job state: </div><div class="four columns"><strong>{jobStateName}</strong></div>
           </div>
           <div class="row">
             <div>
