--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -19,9 +19,7 @@
             <div class="three columns">Description: </div><div class="four columns"><strong>{jobName}</strong></div>
           </div>
           <div class="row">
-            <div class="seven columns">
-              <progress id="percentDone" value="{percentComplete}" max="100">{percentComplete} %</progress>
-            </div>
+            <progress class="seven columns" id="percentDone" value="{percentComplete}" max="100">{percentComplete} %</progress>
           </div>
           <div class="row">
             <div class="three columns">Percent complete:</div><div class="four columns"><strong>{percentComplete} %</strong></div>
@@ -33,7 +31,7 @@
             <div class="three columns">Estimated time remaining:</div><div class="four columns"><strong>{estimatedTimeRemaining}</strong></div>
           </div>
           <div class="row">
-            <div class="three columns">Processing time per video: </div><div class="four columns"><strong>{meanTime} &plusmn; {confInt}</strong></div>
+            <div class="three columns">Processing time per video: </div><div class="four columns"><strong>{meanTime} &plusmn; {confInt} s</strong></div>
           </div>
           <div class="row">
             <div class="three columns">Job creation time: </div><div class="four columns"><strong>{creationTime}</strong></div>
