Bugfix - Forgot to reroot mask directories

--- a/Index.html
+++ b/Index.html
@@ -24,8 +24,8 @@
           <input class="nine columns" type="text" id="jobName" name="jobName" value="My job">
         </div>
         <div class="row">
-          <label class="three columns" for="videoRootMountPoint">Video root mount point:</label>
-          <select class="nine columns" name="videoRootMountPoint" id="videoRootMountPoint">
+          <label class="three columns" for="rootMountPoint">Video root mount point:</label>
+          <select class="nine columns" name="rootMountPoint" id="rootMountPoint">
           {mopts}
           </select>
         </div>
