--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -8,6 +8,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
     <link rel="manifest" href="/static/favicon/site.webmanifest">  </head>
+    <script>
+      var reloaderID = window.setInterval(reloader, 3000);
+      function reloader() {
+        if (document.getElementById("reloadCheckbox").checked) {
+          location.reload();
+        }
+      }
+    </script>
     <body>
       <div class="section">
         <div class="container">
@@ -45,6 +53,10 @@
           <div class="row">
             <div class="three columns">Job state: </div><div class="nine columns"><strong>{jobStateName}</strong></div>
           </div>
+          <div class="row">
+            <label ckass="three columns" for="reloadCheckbox">Auto-reload</label>
+            <input class="nine columns" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
+          <div>
           <div class="row">
             <div>
               <details>
