Increase checkProgress auto-reloader interval to 5s

--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -9,7 +9,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
     <link rel="manifest" href="/static/favicon/site.webmanifest">  </head>
     <script>
-      var reloaderID = window.setInterval(reloader, 3000);
+      var reloadInterval = 5000;
+      var reloaderID = window.setInterval(reloader, reloadInterval);
       function reloader() {
         if (document.getElementById("reloadCheckbox").checked) {
           location.reload();
