Bugfix - Escaping { and } in html template

--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -11,11 +11,11 @@
     <script>
       var reloadInterval = 5000;
       var reloaderID = window.setInterval(reloader, reloadInterval);
-      function reloader() {
-        if (document.getElementById("reloadCheckbox").checked) {
+      function reloader() {{
+        if (document.getElementById("reloadCheckbox").checked) {{
           location.reload();
-        }
-      }
+        }}
+      }}
     </script>
     <body>
       <div class="section">
