Bugfix - HTML typo - didn't close div

--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -57,7 +57,7 @@
           <div class="row">
             <label ckass="three columns" for="reloadCheckbox">Auto-reload</label>
             <input class="nine columns" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
-          <div>
+          </div>
           <div class="row">
             <div>
               <details>
