Bugfix - html typo: ckass => class

--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -55,7 +55,7 @@
             <div class="three columns">Job state: </div><div class="nine columns"><strong>{jobStateName}</strong></div>
           </div>
           <div class="row">
-            <label ckass="three columns" for="reloadCheckbox">Auto-reload</label>
+            <label class="three columns" for="reloadCheckbox">Auto-reload</label>
             <input class="nine columns" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
           </div>
           <div class="row">
