--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -56,7 +56,7 @@
           </div>
           <div class="row">
             <label class="three columns" for="reloadCheckbox">Auto-reload</label>
-            <input class="nine columns" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
+            <input class="one column" style="width: 20px; height: 20px;" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
           </div>
           <div class="row">
             <div>
