--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -54,6 +54,21 @@
             <div class="three columns">Job end time: </div><div class="nine columns"><strong>{completionTime}</strong></div>
           </div>
           <div class="row">
+            <div class="three columns">Chosen neural network:</div><div class="nine columns">{networkName} </div>
+          </div>
+          <div class="row">
+            <div class="three columns">Top mask vertical offset:</div><div class="nine columns">{topOffset} </div>
+          </div>
+          <div class="row">
+            <div class="three columns">Top mask height:</div><div class="nine columns">{topHeight} </div>
+          </div>
+          <div class="row">
+            <div class="three columns">Bottom mask height:</div><div class="nine columns">{botHeight} </div>
+          </div>
+          <div class="row">
+            <div class="three columns">Binary mask threshold:</div><div class="nine columns">{binaryThreshold} </div>
+          </div>
+          <div class="row">
             <div class="three columns">Job state: </div><div class="nine columns"><strong>{jobStateName}</strong></div>
           </div>
           <div class="row">
