--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -18,6 +18,11 @@
           }}
         }}
       }}
+
+      function confirmTerminate() {{
+        var reallyTerminate = confirm("Are you sure you want to terminate this job? Completed masks will remain. Click 'Ok' to terminate, 'Cancel' to allow job to continue.")
+        return reallyTerminate;
+      }}
     </script>
     <body>
       <div class="section">
@@ -74,6 +79,11 @@
           <div class="row">
             <label class="three columns" for="reloadCheckbox">Auto-reload</label>
             <input class="one column" style="width: 20px; height: 20px;" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
+          </div>
+          <div class="row">
+            <form action="/cancelJob/{jobNum}" onsubmit="return confirmTerminate()">
+                <input class="button" type="submit" value="Terminate Job" />
+            </form>
           </div>
           <div class="row">
             <div>
