Bugfix - refactoring jobID as jobNum

--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -28,7 +28,7 @@
       <div class="section">
         <div class="container">
           <h1>Job Progress</h1>
-          <h2>Job {jobID} {exitCodePhrase}</h2>
+          <h2>Job {jobNum} {exitCodePhrase}</h2>
           <h4>{stateDescription}</h4>
           <h4>Job info:</h3>
           <div class="row">
