--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -59,25 +59,25 @@
             <div class="three columns">Job end time: </div><div class="nine columns"><strong>{completionTime}</strong></div>
           </div>
           <div class="row">
-            <div class="three columns">Chosen neural network:</div><div class="nine columns">{networkName} </div>
+            <div class="three columns">Chosen neural network:</div><div class="nine columns"><strong>{networkName}</strong></div>
           </div>
           <div class="row">
-            <div class="three columns">Top mask vertical offset:</div><div class="nine columns">{topOffset} </div>
+            <div class="three columns">Top mask vertical offset:</div><div class="nine columns"><strong>{topOffset}</strong></div>
           </div>
           <div class="row">
-            <div class="three columns">Top mask height:</div><div class="nine columns">{topHeight} </div>
+            <div class="three columns">Top mask height:</div><div class="nine columns"><strong>{topHeight}</strong></div>
           </div>
           <div class="row">
-            <div class="three columns">Bottom mask height:</div><div class="nine columns">{botHeight} </div>
+            <div class="three columns">Bottom mask height:</div><div class="nine columns"><strong>{botHeight}</strong></div>
           </div>
           <div class="row">
-            <div class="three columns">Binary mask threshold:</div><div class="nine columns">{binaryThreshold} </div>
+            <div class="three columns">Binary mask threshold:</div><div class="nine columns"><strong>{binaryThreshold}</strong></div>
           </div>
           <div class="row">
             <div class="three columns">Job state: </div><div class="nine columns"><strong>{jobStateName}</strong></div>
           </div>
           <div class="row">
-            <label class="three columns" for="reloadCheckbox">Auto-reload</label>
+            <div class="three columns">Auto-reload</div>
             <input class="one column" style="width: 20px; height: 20px;" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
           </div>
           <div class="row">
