--- a/ServerManagement.html
+++ b/ServerManagement.html
@@ -16,19 +16,19 @@
           <table class="u-full-width">
             <thead>
               <tr>
-                <th>Name</th>
-                <th>Age</th>
-                <th>Sex</th>
-                <th>Location</th>
+                <th>Job #</th>
+                <th>Job name</th>
+                <th>% complete</th>
+                <th># videos</th>
+                <th>Confirmed?</th>
+                <th>Cancelled?</th>
+                <th>State</th>
+                <th>Check progress</th>
+                <th>Terminate job</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>Dave Gamache</td>
-                <td>26</td>
-                <td>Male</td>
-                <td>San Francisco</td>
-              </tr>
+              {tbody}
             </tbody>
           </table>
         </div>
