--- a/ServerManagement.html
+++ b/ServerManagement.html
@@ -8,7 +8,20 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
     <link rel="manifest" href="/static/favicon/site.webmanifest">  </head>
-    <body>
+    <script>
+      var reloadInterval = 5000;
+      var reloaderID = window.setInterval(reloader, reloadInterval);
+      function reloader() {{
+        if (document.getElementById("reloadCheckbox").checked) {{
+          location.reload();
+        }}
+      }}
+
+      function confirmTerminate(jobNum) {{
+        var reallyTerminate = confirm("Are you sure you want to terminate job #"+jobNum+"? Completed masks will remain. Click 'Ok' to terminate, 'Cancel' to allow job to continue.")
+        return reallyTerminate;
+      }}
+    </script>    <body>
       <div class="section">
         <div class="container">
           <h1>Server Management</h1>
@@ -31,6 +44,10 @@
               {tbody}
             </tbody>
           </table>
+          <div class="row">
+            <div class="three columns">Auto-reload</div>
+            <input class="one column" style="width: 20px; height: 20px;" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
+          </div>
         </div>
       </div>
     </body>
