primary-button ==> button-primary

--- a/ServerManagementTableRowTemplate.html
+++ b/ServerManagementTableRowTemplate.html
@@ -22,7 +22,7 @@
   </td>
   <td>
     <form action="/checkProgress/{jobNum}">
-        <input class="button primary-button" type="submit" value="Check progress" />
+        <input class="button button-primary" type="submit" value="Check progress" />
     </form>
   </td>
   <td>
