--- a/Index.html
+++ b/Index.html
@@ -77,6 +77,11 @@
         </div>
         <input class="button button-primary u-full-width" type="submit" value="Initialize job">
       </form>
+      <div class="row">
+        <div class="five columns">
+          <a href="/serverManagement">Click here for the server management console</a>
+        </div>
+      </div>
     </div>
   </div>
   <!-- <p>Query = {query}</p>
