--- a/ServerManagement.html
+++ b/ServerManagement.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/static/favicon/site.webmanifest">  </head>
+    <link rel="manifest" href="/static/favicon/site.webmanifest">
     <script>
       var reloadInterval = 5000;
       var reloaderID = window.setInterval(reloader, reloadInterval);
@@ -21,34 +21,40 @@
         var reallyTerminate = confirm("Are you sure you want to terminate job #"+jobNum+"? Completed masks will remain. Click 'Ok' to terminate, 'Cancel' to allow job to continue.")
         return reallyTerminate;
       }}
-    </script>    <body>
-      <div class="section">
-        <div class="container">
-          <h1>Server Management</h1>
-          <h4>Job info:</h3>
-          <table class="u-full-width">
-            <thead>
-              <tr>
-                <th>Job #</th>
-                <th>Job name</th>
-                <th>% complete</th>
-                <th># videos</th>
-                <th>Confirmed?</th>
-                <th>Cancelled?</th>
-                <th>State</th>
-                <th>Check progress</th>
-                <th>Terminate job</th>
-              </tr>
-            </thead>
-            <tbody>
-              {tbody}
-            </tbody>
-          </table>
-          <div class="row">
-            <div class="three columns">Auto-reload</div>
-            <input class="one column" style="width: 20px; height: 20px;" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
-          </div>
+    </script>
+  </head>
+  <body>
+    <div class="section">
+      <div class="container">
+        <h1>Server Management</h1>
+        <div class="row">
+          <div class="three columns">Server start time:</div>
+          <div class="nine columns"><strong>{startTime}</strong></div>
+        </div>
+        <h4>Job info:</h4>
+        <table class="u-full-width">
+          <thead>
+            <tr>
+              <th>Job #</th>
+              <th>Job name</th>
+              <th>% complete</th>
+              <th># videos</th>
+              <th>Confirmed?</th>
+              <th>Cancelled?</th>
+              <th>State</th>
+              <th>Check progress</th>
+              <th>Terminate job</th>
+            </tr>
+          </thead>
+          <tbody>
+            {tbody}
+          </tbody>
+        </table>
+        <div class="row">
+          <div class="three columns">Auto-reload</div>
+          <input class="one column" style="width: 20px; height: 20px;" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
         </div>
       </div>
-    </body>
+    </div>
+  </body>
 </html>
