Made terminate job button a warning button

--- a/ServerManagementTableRowTemplate.html
+++ b/ServerManagementTableRowTemplate.html
@@ -27,7 +27,7 @@
   </td>
   <td>
     <form action="/cancelJob/{jobNum}" onsubmit="return confirmTerminate({jobNum})">
-        <input class="button" type="submit" value="Terminate Job" />
+        <input class="button button-warning" type="submit" value="Terminate Job" />
     </form>
   </td>
 </tr>
