Styled deadly button for really bad buttons

--- a/ServerManagement.html
+++ b/ServerManagement.html
@@ -38,7 +38,7 @@
         </div>
         <div class="row">
           <form action="/restartServer" onsubmit="return confirmRestart()">
-              <input class="button button-warning" type="submit" value="Restart server" />
+              <input class="button button-deadly" type="submit" value="Restart server" />
           </form>
         </div>
         <h4>Job info:</h4>
