Refactored everything to allow for a top and bot neural network (on the front end) and arbitary neural networks (on the backend)

--- a/CheckProgress.html
+++ b/CheckProgress.html
@@ -59,7 +59,10 @@
             <div class="three columns">Job end time: </div><div class="nine columns"><strong>{completionTime}</strong></div>
           </div>
           <div class="row">
-            <div class="three columns">Chosen neural network:</div><div class="nine columns"><strong>{networkName}</strong></div>
+            <div class="three columns">Chosen top neural network:</div><div class="nine columns"><strong>{topNetworkName}</strong></div>
+          </div>
+          <div class="row">
+            <div class="three columns">Chosen bot neural network:</div><div class="nine columns"><strong>{botNetworkName}</strong></div>
           </div>
           <div class="row">
             <div class="three columns">Top mask vertical offset:</div><div class="nine columns"><strong>{topOffset}</strong></div>
