--- a/Index.html
+++ b/Index.html
@@ -54,8 +54,14 @@
           </label>
         </div>
         <div class="row">
-          <label class="three columns" class="six columns" for="networkName">Neural network name:</label>
-          <select class="nine columns" name="neuralNetwork" id="neuralNetwork">
+          <label class="three columns" class="six columns" for="topNetworkName">Top neural network name:</label>
+          <select class="nine columns" name="topNetworkName" id="topNetworkName">
+          {nopts}
+          </select>
+        </div>
+        <div class="row">
+          <label class="three columns" class="six columns" for="botNetworkName">Bot neural network name:</label>
+          <select class="nine columns" name="botNetworkName" id="botNetworkName">
           {nopts}
           </select>
         </div>
