--- a/FinalizeJob.html
+++ b/FinalizeJob.html
@@ -40,7 +40,10 @@
           </details>
         </div>
         <div class="row">
-          <div class="three columns">Chosen neural network:</div><div class="four columns">{networkName} </div>
+          <div class="three columns">Chosen top neural network:</div><div class="four columns">{topNetworkName} </div>
+        </div>
+        <div class="row">
+          <div class="three columns">Chosen bottom neural network:</div><div class="four columns">{botNetworkName} </div>
         </div>
         <div class="row">
           <div class="three columns">Top mask vertical offset:</div><div class="four columns">{topOffset} </div>
